[package]
name = "concept2drive"
version = "0.1.0"
authors = ["KoffeinFlummi <koffeinflummi@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
chrono = "0.4.13"
fatfs = "0.3.4"
fscommon = "0.1.1"
regex = "1"

serde = { version = "1", features = ["derive"], optional = true }
docopt = { version = "1", optional = true }
reqwest = { version = "0.10", features = ["json"], optional = true }
tokio = { version = "0.2", features = ["full"], optional = true }
indicatif = { version = "0.15.0", optional = true }
xdg = { version = "2.2.0", optional = true }
colored = { version = "2", optional = true }

[features]
default = ["cli"]
cli = ["serde", "docopt", "reqwest", "tokio", "indicatif", "xdg", "colored"]
